--- a/gfdesignpatterns/gfdesignpatterns/mainCss.css
+++ b/gfdesignpatterns/gfdesignpatterns/mainCss.css
@@ -1,12 +1,20 @@
 ﻿body {
     background-color: #32CD32 !important;
-	color: #ffffff;
+    color: #ffffff;
 }
-.mainDiv{
-	width:1000px;
 
+.mainDiv {
+    width: 1000px;
 }
-.center{
-	    margin-left: auto;
+
+.center {
+    margin-left: auto;
     margin-right: auto;
+}
+
+.margin {
+    margin-top: 5px !important;
+    margin-right: 0px;
+    margin-bottom: 5px;
+    margin-left: 0px;
 }
