--- a/gfdesignpatterns/gfdesignpatterns/MainMaster.Master
+++ b/gfdesignpatterns/gfdesignpatterns/MainMaster.Master
@@ -19,6 +19,7 @@
 
             <button type="button" class="btn btn-primary margin" onclick="window.location.href='/singleton/SingletonDemo.aspx'">Singleton</button>
             <button type="button" class="btn btn-primary margin" onclick="window.location.href='/builder/BuilderDemo.aspx'">Builder</button>
+            <button type="button" class="btn btn-primary margin" onclick="window.location.href='/Factory/FactoryDemo.aspx'">Factory</button>
             <img class="img-rounded margin" style='width: 100%; height: 200px; overflow: hidden' src="https://mlcarmon.expressions.syr.edu/trfindustryforces/wp-content/uploads/sites/2/2014/10/7f017abb-f3d9-40c4-a841-d9d686dc9a56-Pixar-Movies.jpeg" />
             <hr />
             <div>
@@ -34,6 +35,7 @@
         <%--Footer--%>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.15/angular.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.6.5/css/bootstrap-select.min.css"></script>
         <asp:ContentPlaceHolder ID="scripts" runat="server">
         </asp:ContentPlaceHolder>
     </div>
