--- a/gfdesignpatterns/gfdesignpatterns/MainMaster.Master
+++ b/gfdesignpatterns/gfdesignpatterns/MainMaster.Master
@@ -20,6 +20,7 @@
             <button type="button" class="btn btn-primary margin" onclick="window.location.href='/singleton/SingletonDemo.aspx'">Singleton</button>
             <button type="button" class="btn btn-primary margin" onclick="window.location.href='/builder/BuilderDemo.aspx'">Builder</button>
             <button type="button" class="btn btn-primary margin" onclick="window.location.href='/Factory/FactoryDemo.aspx'">Factory</button>
+            <button type="button" class="btn btn-primary margin" onclick="window.location.href='/observer/ObserverDemo.aspx'">Observer</button>
             <img class="img-rounded margin" style='width: 100%; height: 200px; overflow: hidden' src="https://mlcarmon.expressions.syr.edu/trfindustryforces/wp-content/uploads/sites/2/2014/10/7f017abb-f3d9-40c4-a841-d9d686dc9a56-Pixar-Movies.jpeg" />
             <hr />
             <div>
