--- a/gfdesignpatterns/gfdesignpatterns/MainMaster.Master
+++ b/gfdesignpatterns/gfdesignpatterns/MainMaster.Master
@@ -13,14 +13,25 @@
 </head>
 <body>
     <form id="form1" runat="server">
-        <div class="mainDiv center">
+        <div class="mainDiv center ">
+            <div class="btn-group btn-group-justified">
+                <div class="btn-group" role="group">
+                    <button type="button" class="btn btn-primary margin pull-left" onclick="window.location.href='/default.aspx'">Home</button>
+                </div>
+                <div class="btn-group" role="group">
+                    <button type="button" class="btn btn-primary margin pull-left " onclick="window.location.href='/singleton/SingletonDemo.aspx'">Singleton</button>
+                </div>
+                <div class="btn-group" role="group">
+                    <button type="button" class="btn btn-primary margin pull-left" onclick="window.location.href='/builder/BuilderDemo.aspx'">Builder</button>
+                </div>
+                <div class="btn-group" role="group">
+                    <button type="button" class="btn btn-primary margin pull-left" onclick="window.location.href='/Factory/FactoryDemo.aspx'">Factory</button>
+                </div>
+                <div class="btn-group" role="group">
+                    <button type="button" class="btn btn-primary margin pull-left" onclick="window.location.href='/observer/ObserverDemo.aspx'">Observer</button>
+                </div>
 
-            <button type="button" class="btn btn-primary margin" onclick="window.location.href='/default.aspx'">Home</button>
-
-            <button type="button" class="btn btn-primary margin" onclick="window.location.href='/singleton/SingletonDemo.aspx'">Singleton</button>
-            <button type="button" class="btn btn-primary margin" onclick="window.location.href='/builder/BuilderDemo.aspx'">Builder</button>
-            <button type="button" class="btn btn-primary margin" onclick="window.location.href='/Factory/FactoryDemo.aspx'">Factory</button>
-            <button type="button" class="btn btn-primary margin" onclick="window.location.href='/observer/ObserverDemo.aspx'">Observer</button>
+            </div>
             <img class="img-rounded margin" style='width: 100%; height: 200px; overflow: hidden' src="https://mlcarmon.expressions.syr.edu/trfindustryforces/wp-content/uploads/sites/2/2014/10/7f017abb-f3d9-40c4-a841-d9d686dc9a56-Pixar-Movies.jpeg" />
             <hr />
             <div>
