Moved everything to visitor and finished C# and Ruby Visitor Pattern

--- a/gfdesignpatterns/gfdesignpatterns/mainCss.css
+++ b/gfdesignpatterns/gfdesignpatterns/mainCss.css
@@ -23,3 +23,7 @@ img.flighweight_image_small{
     height:50px;
     width:50px;
 }
+.table th, .table td { 
+     border-top: none !important; 
+
+ }
