--- a/gfdesignpatterns/gfdesignpatterns/MainMaster.Master
+++ b/gfdesignpatterns/gfdesignpatterns/MainMaster.Master
@@ -34,7 +34,7 @@
                     <button type="button" class="btn btn-primary margin pull-left" onclick="window.location.href='/flyweight/FlyweightDemo.aspx'">Flyweight</button>
                 </div>
                 <div class="btn-group" role="group">
-                    <button type="button" class="btn btn-primary margin pull-left" onclick="window.location.href='/state/state.aspx'">To Be Named</button>
+                    <button type="button" class="btn btn-primary margin pull-left" onclick="window.location.href='/visitor/visitor.aspx'">Visitor</button>
                 </div>
 
             </div>
